fixed overflow of headline on mobile

--- a/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
+++ b/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
@@ -23,6 +23,12 @@
     }
 }
 
+.project_headline {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .background {
     background: linear-gradient(
         180deg,
